# watchme

./: .gitattributes  AGENTS.md  CHANGELOG.md  Cargo.toml  HANDOFF.md  README.md  THIRD-PARTY-NOTICES.md  justfile
.github/workflows/: ci.yml  release.yml
config/: config.example.toml  herdr-plugin.example.toml
docs/: README.md  benchmarks.md  commands.md  compatibility.md  configuration.md  hooks.md  limitations.md  manifests.md  privacy.md  release-checklist.md  threat-model.md  troubleshooting.md
docs/superpowers/plans/: 2026-07-11-watchme-v1.md  2026-07-16-codex-context-daemon-start.md  2026-07-16-native-herdr-fallback.md  2026-07-17-codex-native-herdr-recovery.md
fixtures/: codex-goal-blocked-samples.jsonl  malicious-terminal-samples.txt  process-trees.json  recovery-plan.invalid.json  recovery-plan.valid.json
fixtures/herdr/: contract.jsonl
manifests/: gemini.toml  grok.toml  hermes.toml  kimi.toml  opencode.toml  openhands.toml  pi.toml  unknown.toml
packaging/completions/: watchme.bash
packaging/herdr/: watchme-action.example.toml
packaging/launchd/: com.clankercode.watchme.plist
packaging/man/: watchme.1
packaging/systemd/: watchme.service
schemas/: event.schema.json  provider-manifest.schema.json  recovery-plan.schema.json  snapshot.schema.json
scripts/: benchmark-idle.sh  install.sh  reconcile-release.sh  release-notes.sh  test-reconcile-release.sh  uninstall.sh  validate-schemas.sh
src/: audit.rs  claude_attachment.rs  cli.rs  client.rs  codex_attachment.rs  config.rs  daemon_client.rs  doctor.rs  error.rs  hook_cli.rs  lib.rs  main.rs  notify.rs  paths.rs  policy.rs  redact.rs  registration_context.rs  store.rs
src/agents/: claude.rs  codex.rs  codex_state.rs  manifest.rs  mod.rs
src/daemon/: codex_composer.rs  ipc_service.rs  lifecycle.rs  lifecycle_tests.rs  lock.rs  mod.rs  observation.rs  observer_runtime.rs  recovery_jobs.rs  recovery_runtime.rs  registry.rs  runtime_services.rs  scheduler.rs
src/hooks/: claude.rs
src/ipc/: mod.rs  protocol.rs
src/model/: action.rs  event.rs  identity.rs  mod.rs  state.rs
src/mux/: fake.rs  herdr.rs  mod.rs  tmux.rs
src/mux/herdr/: bridge.rs  mod.rs  (+1 more)
src/observe/: jsonl.rs  mod.rs  screen.rs
src/planner/: mod.rs  process.rs  router.rs  schema.rs
src/process/: linux.rs  macos.rs  mod.rs  scoring.rs
src/recovery/: action_store.rs  actuator.rs  coordinator.rs  engine.rs  mod.rs  reset_time.rs  state_machine.rs  transaction.rs
tests/: action_transactions.rs  claude_daemon_e2e.rs  claude_recovery.rs  cli.rs  codex_attachment.rs  codex_recovery.rs  daemon_lifecycle.rs  herdr_contract.rs  install_smoke.rs  manifests.rs  observation_daemon.rs  observation_integration.rs  observation_policy.rs  operability.rs  planner_security.rs  process_identity.rs  recovery_daemon_herdr_e2e.rs  state_store.rs  tmux_integration.rs
tests/fixtures/: fake_codex.rs
(+4 files in other folders)
