[package]
name = "watchme"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Unlicense OR CC0-1.0"
description = "Local supervisor for long-running coding-agent sessions"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"
rustix = { version = "1.1", features = ["fs", "process"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.20"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

[profile.release]
codegen-units = 1
lto = "thin"
overflow-checks = true
panic = "abort"
strip = "symbols"
