[package]
name = "watchme"
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
license = "Unlicense OR CC0-1.0"
description = "Local supervisor for long-running coding-agent sessions"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
chrono-tz = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
thiserror = "2.0"
toml = "0.8"
regex = "1.11"
rustix = { version = "1.1", features = ["fs", "process", "net"] }
tempfile = "3.20"
tokio = { version = "1.48", features = ["io-util", "macros", "net", "rt", "sync", "time"] }

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14.11"

[patch.crates-io]
libproc = { path = "vendor/libproc" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
proptest = "1.7"
tempfile = "3.20"
tokio = { version = "1.48", features = ["test-util"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

[profile.release]
codegen-units = 1
lto = "thin"
overflow-checks = true
panic = "abort"
strip = "symbols"
